sys info 样式修改